CMAKE_MINIMUM_REQUIRED (VERSION 2.8) 
PROJECT (boost_playground)

SET(EXECUTABLES main_thread_oop main_threading z_simple_alarm z_simple_sleep)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2")

# LIB - Glut
	INCLUDE_DIRECTORIES( /System/Library/Frameworks )
	FIND_PACKAGE (GLUT)
	FIND_PACKAGE (OpenGL)
	FIND_LIBRARY(GLUT_LIBRARY GLUT )
	FIND_LIBRARY(OpenGL_LIBRARY OpenGL )
	MARK_AS_ADVANCED (GLUT_LIBRARY OpenGL_LIBRARY)
	SET(EXTRA_LIBS ${EXTRA_LIBS} ${GLUT_LIBRARY} ${OpenGL_LIBRARY})
	
# LIB - Boost
	SET (BOOST_LIBS thread date_time system)
	FIND_PACKAGE (Boost COMPONENTS ${BOOST_LIBS} REQUIRED)
	FIND_PACKAGE (Threads REQUIRED)
	SET (EXTRA_LIBS ${EXTRA_LIBS} ${Boost_LIBRARIES})
	SET (EXTRA_LIBS ${EXTRA_LIBS} ${CMAKE_THREAD_LIBS_INIT})


FOREACH (EXE ${EXECUTABLES})
	ADD_EXECUTABLE (${EXE} ${EXE}.cpp DataSnapshot.cpp DeviceDataGobbler.cpp Lockable.cpp)
	TARGET_LINK_LIBRARIES (${EXE} ${EXTRA_LIBS})
ENDFOREACH (EXE)
