cmake_minimum_required (VERSION 2.8) 
project (ponyoni_prototype_playground)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2")
#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")

SET(EXECUTABLES App AppUserTracker)

INCLUDE_DIRECTORIES(/usr/local/include/ponyo)


INCLUDE_DIRECTORIES(/usr/include/ni)
FIND_LIBRARY(OpenNI_LIBRARY OpenNI )
SET(EXTRA_LIBS ${EXTRA_LIBS} ${OpenNI_LIBRARY} )


FIND_LIBRARY(PnCommon_LIBRARY PnCommon)
FIND_LIBRARY(PnOpenNI_LIBRARY PnOpenNI)
SET(EXTRA_LIBS ${EXTRA_LIBS} ${PnCommon_LIBRARY} )
SET(EXTRA_LIBS ${EXTRA_LIBS} ${PnOpenNI_LIBRARY} )

FOREACH (EXE ${EXECUTABLES})
	ADD_EXECUTABLE (${EXE} ${EXE}.cpp)
	TARGET_LINK_LIBRARIES (${EXE} ${EXTRA_LIBS})
ENDFOREACH (EXE)

