CMAKE_MINIMUM_REQUIRED (VERSION 2.8) 
PROJECT (ponyoni_prototype_playground)

#SET(EXECUTABLES App AppUserTracker AppUserManager AppContextX AppSkeletonGL)
SET(EXECUTABLES AppSkeletonGL)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2")

INCLUDE_DIRECTORIES(/usr/local/include/ponyo)
INCLUDE_DIRECTORIES(/usr/include/ni)

FIND_LIBRARY(PnCommon_LIBRARY PnCommon)
FIND_LIBRARY(PnOpenNI_LIBRARY PnOpenNI)
FIND_LIBRARY(OpenNI_LIBRARY OpenNI )

# LIB - Boost
	SET (BOOST_LIBS thread date_time system)
	FIND_PACKAGE (Boost COMPONENTS ${BOOST_LIBS} REQUIRED)
	FIND_PACKAGE (Threads REQUIRED)
	SET (EXTRA_LIBS ${EXTRA_LIBS} ${Boost_LIBRARIES})
	SET (EXTRA_LIBS ${EXTRA_LIBS} ${CMAKE_THREAD_LIBS_INIT})

# LIB - Glut
	INCLUDE_DIRECTORIES(/System/Library/Frameworks)
	FIND_LIBRARY(GLUT_LIBRARY GLUT )
	FIND_LIBRARY(OpenGL_LIBRARY OpenGL )
	MARK_AS_ADVANCED (GLUT_LIBRARY OpenGL_LIBRARY)
	SET(EXTRA_LIBS ${EXTRA_LIBS} ${GLUT_LIBRARY} ${OpenGL_LIBRARY})
	
SET(EXTRA_LIBS ${EXTRA_LIBS} ${PnCommon_LIBRARY} )
SET(EXTRA_LIBS ${EXTRA_LIBS} ${PnOpenNI_LIBRARY} )
SET(EXTRA_LIBS ${EXTRA_LIBS} ${OpenNI_LIBRARY} )

FOREACH (EXE ${EXECUTABLES})
	ADD_EXECUTABLE (${EXE} ${EXE}.cpp)
	TARGET_LINK_LIBRARIES (${EXE} ${EXTRA_LIBS})
ENDFOREACH (EXE)

