MESSAGE ("==============> ROOT")

# general setup
	CMAKE_MINIMUM_REQUIRED (VERSION 2.8) 
	PROJECT (PonyoNI)
	#SET(EXECUTABLE_OUTPUT_PATH target)
	SET(EXECUTABLE_NAME App)
	
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2") # prevent "Undefined symbols" error
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")


# LIB - Glut
	INCLUDE_DIRECTORIES( /System/Library/Frameworks )
	FIND_LIBRARY(GLUT_LIBRARY GLUT )
	FIND_LIBRARY(OpenGL_LIBRARY OpenGL )
	MARK_AS_ADVANCED (GLUT_LIBRARY OpenGL_LIBRARY)
	SET(EXTRA_LIBS ${EXTRA_LIBS} ${GLUT_LIBRARY} ${OpenGL_LIBRARY})

# LIB - OpenCV
	FIND_PACKAGE ( OpenCV REQUIRED )
	SET (EXTRA_LIBS ${EXTRA_LIBS} ${OpenCV_LIBS})

# LIB - Boost
	SET (BOOST_LIBS thread date_time system)
	FIND_PACKAGE (Boost COMPONENTS ${BOOST_LIBS} REQUIRED)
	FIND_PACKAGE (Threads REQUIRED)
	SET (EXTRA_LIBS ${EXTRA_LIBS} ${Boost_LIBRARIES})
	SET (EXTRA_LIBS ${EXTRA_LIBS} ${CMAKE_THREAD_LIBS_INIT})

# LIB - OpenNI
	INCLUDE_DIRECTORIES (/usr/include/ni)
	FIND_LIBRARY (OpenNI_LIBRARY OpenNI)
	SET (EXTRA_LIBS ${EXTRA_LIBS} ${OpenNI_LIBRARY})


# PnCommon
	INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/PnCommon/src")
	ADD_SUBDIRECTORY (PnCommon)
	SET (EXTRA_LIBS ${EXTRA_LIBS} PnCommon)

 PnOpenNI
	INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/PnOpenNI/src")
	ADD_SUBDIRECTORY (PnOpenNI)
	SET (EXTRA_LIBS ${EXTRA_LIBS} PnOpenNI)

# PonyoNIApp
#	ADD_SUBDIRECTORY (PonyoNIApp)

#	SET (PONYONIAPP_SRC_FOLDER "${PROJECT_SOURCE_DIR}/PonyoNIApp/src")
#	FILE (GLOB_RECURSE CPP_FILES "${PONYONIAPP_SRC_FOLDER}/*.cpp")
#	ADD_EXECUTABLE (${EXECUTABLE_NAME} ${CPP_FILES})
#	TARGET_LINK_LIBRARIES (${EXECUTABLE_NAME} ${EXTRA_LIBS})

# some messages
	MESSAGE ("[ROOT] CMAKE_CXX_FLAGS: ${CMAKE_CXX_FLAGS}")
	MESSAGE ("[ROOT] EXTRA_LIBS: ${EXTRA_LIBS}")


#ADD_DEPENDENCIES (PnOpenNI PnCommon)
