MESSAGE ("")
MESSAGE ("==============> PxCommon")

SET (PROJECT_SOURCE_DIR src)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
SET (MY_LIB_NAME PxCommon)

FILE (GLOB_RECURSE PXCOMMON_CPP_FILES "${PROJECT_SOURCE_DIR}/*.cpp")
ADD_LIBRARY (${MY_LIB_NAME} SHARED ${PXCOMMON_CPP_FILES})

INSTALL (TARGETS ${MY_LIB_NAME} LIBRARY DESTINATION lib)

INSTALL (DIRECTORY ${PROJECT_SOURCE_DIR}/ponyo
         DESTINATION include
         FILES_MATCHING PATTERN "*.hpp"
                        PATTERN ".svn" EXCLUDE
        )