CMAKE_MINIMUM_REQUIRED (VERSION 2.8) 
PROJECT (PnJNA)

SET (PROJECT_SOURCE_DIR pnjna)
SET (LIBRARY_OUTPUT_PATH target)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2")
#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")

# add OpenNI
INCLUDE_DIRECTORIES(/usr/include/ni)
FIND_LIBRARY(OpenNI_LIBRARY OpenNI)
SET(EXTRA_LIBS ${EXTRA_LIBS} ${OpenNI_LIBRARY})

file(GLOB_RECURSE CPP_FILES "${PROJECT_SOURCE_DIR}/*.cpp")
ADD_LIBRARY (PnJNA SHARED ${CPP_FILES})

MESSAGE ("EXTRA_LIBS: ${EXTRA_LIBS}")
TARGET_LINK_LIBRARIES (PnJNA ${EXTRA_LIBS})

INSTALL (TARGETS PnJNA LIBRARY DESTINATION lib)
INSTALL (DIRECTORY pnjna
        DESTINATION include/ponyo
        FILES_MATCHING PATTERN "*.hpp"
                       PATTERN ".svn" EXCLUDE
       )
