CMAKE_MINIMUM_REQUIRED (VERSION 2.8) 
PROJECT (PnJNA)

SET (TARGET_LIB_NAME PnOpenNICpp)
SET (TARGET_INCLUDE_GROUP_NAME ponyo)
SET (PROJECT_SOURCE_DIR pnjna)
SET (LIBRARY_OUTPUT_PATH target)

SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2")
#SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")

# add OpenNI
INCLUDE_DIRECTORIES (/usr/include/ni)
FIND_LIBRARY (OpenNI_LIBRARY OpenNI)
SET (EXTRA_LIBS ${EXTRA_LIBS} ${OpenNI_LIBRARY})

FILE (GLOB_RECURSE CPP_FILES "${PROJECT_SOURCE_DIR}/*.cpp")
ADD_LIBRARY (${TARGET_LIB_NAME} SHARED ${CPP_FILES})

MESSAGE ("EXTRA_LIBS: ${EXTRA_LIBS}")
TARGET_LINK_LIBRARIES (${TARGET_LIB_NAME} ${EXTRA_LIBS})

INSTALL (TARGETS ${TARGET_LIB_NAME} LIBRARY DESTINATION lib)
INSTALL (DIRECTORY ${PROJECT_SOURCE_DIR}
        DESTINATION include/${TARGET_INCLUDE_GROUP_NAME}
        FILES_MATCHING PATTERN "*.hpp"
                       PATTERN ".svn" EXCLUDE
        )
