MESSAGE ("")
MESSAGE ("==============> PnCommon")
MESSAGE ("[PnCommon] EXTRA_LIBS: ${EXTRA_LIBS}")

SET (PROJECT_SOURCE_DIR pncommon)

FILE (GLOB_RECURSE CPP_FILES "${PROJECT_SOURCE_DIR}/*.cpp")
ADD_LIBRARY (PnCommon SHARED ${CPP_FILES})
TARGET_LINK_LIBRARIES (PnCommon ${EXTRA_LIBS})

INSTALL (TARGETS PnCommon LIBRARY DESTINATION lib)
INSTALL (DIRECTORY ${PROJECT_SOURCE_DIR}
         DESTINATION include/ponyo
         FILES_MATCHING PATTERN "*.hpp"
                        PATTERN ".svn" EXCLUDE
        )