MESSAGE ("")
MESSAGE ("==============> PnOpenNI")

SET (PROJECT_SOURCE_DIR pnopenni)


FILE (GLOB_RECURSE CPP_FILES "${PROJECT_SOURCE_DIR}/*.cpp")
ADD_LIBRARY (PnOpenNI ${CPP_FILES})

INSTALL (TARGETS PnOpenNI LIBRARY DESTINATION lib)
INSTALL (DIRECTORY ${PROJECT_SOURCE_DIR}
         DESTINATION include/ponyo
         FILES_MATCHING PATTERN "*.hpp"
                        PATTERN ".svn" EXCLUDE
        )

