MESSAGE ("")
MESSAGE ("==============> PnOpenNI")
MESSAGE ("[PnOpenNI] EXTRA_LIBS: ${EXTRA_LIBS}")

SET (PROJECT_SOURCE_DIR pnopenni)


FILE (GLOB_RECURSE CPP_FILES "${PROJECT_SOURCE_DIR}/*.cpp")
ADD_LIBRARY (PnOpenNI SHARED ${CPP_FILES})
TARGET_LINK_LIBRARIES (PnOpenNI ${EXTRA_LIBS})

INSTALL (TARGETS PnOpenNI LIBRARY DESTINATION lib)
INSTALL (DIRECTORY ${PROJECT_SOURCE_DIR}
         DESTINATION include/ponyo
         FILES_MATCHING PATTERN "*.hpp"
                        PATTERN ".svn" EXCLUDE
        )

