MESSAGE ("")
MESSAGE ("==============> PonyoNIApp")

SET (PROJECT_SOURCE_DIR src)
SET (EXECUTABLE_NAME PonyoNIApp)
#SET (EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)


FILE (GLOB_RECURSE CPP_FILES "${PROJECT_SOURCE_DIR}/*.cpp")
ADD_EXECUTABLE (${EXECUTABLE_NAME} ${CPP_FILES})
TARGET_LINK_LIBRARIES (${EXECUTABLE_NAME} ${EXTRA_LIBS})
