SET (PROJECT_SOURCE_DIR src)

PN_DEPENDENCY_OPENNI ()
#PN_DEPENDENCY_OSC ()


SET (EXECUTABLE_OUTPUT_PATH bin)
#SET (EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/samples/bin)

# TODO even necessary??
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR})

INCLUDE_DIRECTORIES (/usr/local/include/oscpack)
FIND_LIBRARY (OscPack_LIBRARY oscpack)
SET (EXTRA_LIBS ${EXTRA_LIBS} ${OscPack_LIBRARY})

FILE (GLOB_RECURSE PNOSC_CPP_FILES "${PROJECT_SOURCE_DIR}/*.cpp")
ADD_EXECUTABLE (PonyoOSC ${PNOSC_CPP_FILES})
TARGET_LINK_LIBRARIES (PonyoOSC ${EXTRA_LIBS})
