SET (PROJECT_SOURCE_DIR src)

PN_DEPENDENCY_OPENNI ()
PN_DEPENDENCY_OSCPACK ()


SET (EXE_NAME PonyoOSCServer)
SET (EXECUTABLE_OUTPUT_PATH bin)
#SET (EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/samples/bin)

# TODO even necessary??
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR})


FILE (GLOB_RECURSE PNOSC_CPP_FILES "${PROJECT_SOURCE_DIR}/*.cpp")
ADD_EXECUTABLE (${EXE_NAME} ${PNOSC_CPP_FILES})
TARGET_LINK_LIBRARIES (${EXE_NAME} ${EXTRA_LIBS})
