SET (TARGET_LIB_NAME PnOpenNI)

SET (PROJECT_SOURCE_DIR src)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR})

FILE (GLOB_RECURSE CPP_FILES "${PROJECT_SOURCE_DIR}/*.cpp")
ADD_LIBRARY (${TARGET_LIB_NAME} SHARED ${CPP_FILES})
TARGET_LINK_LIBRARIES (${TARGET_LIB_NAME} ${EXTRA_LIBS})

INSTALL (TARGETS ${TARGET_LIB_NAME} LIBRARY DESTINATION lib)
INSTALL (DIRECTORY ${PROJECT_SOURCE_DIR}/ponyo
         DESTINATION include
         FILES_MATCHING PATTERN "*.hpp"
                        PATTERN ".svn" EXCLUDE
        )
