SET (PROJECT_SOURCE_DIR src)


SET(EXECUTABLES SimpleSample PlaygroundSample)
SET (EXECUTABLE_OUTPUT_PATH bin)
#SET (EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/samples/bin)

# TODO even necessary??
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR})

FOREACH (EXE ${EXECUTABLES})
	ADD_EXECUTABLE (${EXE} src/ponyo/samples/${EXE}.cpp)
	TARGET_LINK_LIBRARIES (${EXE} ${EXTRA_LIBS})
ENDFOREACH (EXE)
