SET (PROJECT_SOURCE_DIR src)

PN_DEPENDENCY_OPENNI ()

SET (EXECUTABLES SimpleSample PlaygroundSample WindowedSample StartRecordingSample)
SET (EXECUTABLE_OUTPUT_PATH bin/samples)

# TODO even necessary??
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR})

FOREACH (EXE ${EXECUTABLES})
	ADD_EXECUTABLE (${EXE} src/ponyo/samples/${EXE}.cpp)
	TARGET_LINK_LIBRARIES (${EXE} ${EXTRA_LIBS})
ENDFOREACH (EXE)
