CMAKE_MINIMUM_REQUIRED (VERSION 2.8) 
PROJECT (PnJnaWrap)


SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2")
#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")

INCLUDE_DIRECTORIES(/usr/include/ni)
FIND_LIBRARY(OpenNI_LIBRARY OpenNI)
SET(EXTRA_LIBS ${EXTRA_LIBS} ${OpenNI_LIBRARY})

SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/jna)

ADD_LIBRARY (PnJnaCpp SHARED ${PROJECT_SOURCE_DIR}/PnJnaCpp.cpp)
#ADD_LIBRARY (pnni SHARED ${PROJECT_SOURCE_DIR}/pnni.c)
#ADD_EXECUTABLE (main_pnni ${PROJECT_SOURCE_DIR}/main_pnni.c)
#set(EXTRA_LIBS ${EXTRA_LIBS} pnni)

MESSAGE("EXTRA_LIBS: ${EXTRA_LIBS}")
TARGET_LINK_LIBRARIES (PnJnaCpp ${EXTRA_LIBS})